# ai-sys

./: LICENSE
ai_multimodule_project/: README.md  pyproject.toml
ai_multimodule_project/common/: config.py  schemas.py
ai_multimodule_project/services/: local_embeddings_service.py  local_embeddings_service_alt.py  local_ranker_service.py
ai_multimodule_project/services/assistant/: assistant_agent.py
ai_multimodule_project/services/autonomous/: autonomous_agent.py
ai_multimodule_project/services/code_specialist/: code_specialist_agent.py
ai_multimodule_project/services/orchestrator/: orchestrator.py
ai_multimodule_project/services/rag/: rag_agent.py
ai_multimodule_project/tests/: test_api.py
scrap_paper_files/: async_queue_example.py  query_assistant.py
scrap_paper_files/agents/: assistant_agent.py  autonomous_agent.py  code_specialist_agent.py  rag_agent.py
